# thermal-vibes

./: .gitignore  README.md  pyproject.toml
scripts/: explore_thermal.py  p3_camera.py  p3_viewer_dpg.py
